--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,16 @@ file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/
 add_library(${PROJECT_NAME} ${headers} ${sources})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
+if(MSVC)
+  target_compile_definitions(${PROJECT_NAME} PUBLIC
+          # FIXME: Silence MSVC warnings about use of stdext::checked_array_iterator until migration to C++20:
+          #        warning STL4043: stdext::checked_array_iterator, stdext::unchecked_array_iterator,
+          #        and related factory functions are non-Standard extensions and will be removed in the future.
+          #        std::span (since C++20) and gsl::span can be used instead.
+          _SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING
+  )
+endif()
+
 # being a cross-platform target, we enforce standards conformance on MSVC
 target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
 
