--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required(VERSION 3.14...3.22)
 
 # Note: update this to your new project's name and version
 project(
-  Mosiac
-  VERSION 1.0
+  Mosaic
+  VERSION 0.1.0
   LANGUAGES CXX
 )
 
